[package]
name = "simplegl"
version = "0.1.0"
edition = "2024"

[features]
profile = ["mini/profile", "window/profile"]
info = ["mini/info", "window/info"]
warn = ["mini/warn", "window/warn"]
error = ["mini/error", "window/error"]

[dependencies]
gl = "0.14.0"
glow = "0.16.0"
mini = { version = "0.1.0", git = "https://github.com/zx3no/mini" }
window = { version = "0.1.0", path = "../projects/window" }
# window = { git = "https://github.com/zx3no/window", version = "0.1.0" }